--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "emojione": "^2.2.6",
     "escape-string-regexp": "^1.0.5",
     "lodash": "^4.15.0",
+    "prop-types": "15.6.0",
     "react-virtualized": "^8.11.4",
     "store": "^1.3.20"
   },
